--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,20 +28,22 @@ jobs:
           node-version: '18'
           cache: 'npm'
 
-      - name: Check for package-lock.json
+      - name: Generate package-lock.json
         run: |
           if [ ! -f package-lock.json ]; then
             echo "package-lock.json not found, generating..."
-            npm install
+            npm install --package-lock-only
+          else
+            echo "package-lock.json found"
           fi
 
       - name: Install dependencies
-        run: npm ci
-        if: steps.check-files.outputs.has-lockfile == 'true'
-
-      - name: Install dependencies (fallback)
-        run: npm install
-        if: steps.check-files.outputs.has-lockfile != 'true'
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
 
       - name: Build project
         run: npm run build
