--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "start": "webpack serve --mode development --open"
   },
   "dependencies": {
-    "firebase": "^9.23.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.14"
+    "firebase": "^9.23.0"
   },
   "devDependencies": {
     "webpack": "^5.88.0",
@@ -21,6 +19,8 @@
     "style-loader": "^3.3.0",
     "postcss-loader": "^7.3.0",
     "html-webpack-plugin": "^5.5.0",
-    "copy-webpack-plugin": "^11.0.0"
+    "copy-webpack-plugin": "^11.0.0",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14"
   }
 }
