--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "copy-webpack-plugin": "^11.0.0",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.14"
+    "process": "^0.11.10"
   }
 }
