--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "html-webpack-plugin": "^5.5.0",
     "copy-webpack-plugin": "^11.0.0",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.14"
+    "autoprefixer": "^10.4.14",
     "process": "^0.11.10"
   }
 }
